# dashboard

./: .dockerignore  .gitignore  Dockerfile  __main__.py  docker-compose.yml  environment.yml  logging.yml  pyproject.toml  readme.md  run-gui.sh  run-services.sh  spec-file.txt  start.sh  stop-services.sh
dash/: config.py  server.py
dash-gui/: .gitignore  README.md  config.json  config.yml  logging_conf.py  main.py  pyproject.toml
dash-gui/src/investment_widget/: __init__.py  app.py  config.py  constants.py  ingest.py  paths.py  signal_tether.py
dash-gui/src/investment_widget/bridge/: __init__.py  summary_bridge.py
dash-gui/src/investment_widget/data/: __init__.py  api_client.py  models.py  snapshot_store.py
dash-gui/src/investment_widget/domain/: __init__.py  models.py
dash-gui/src/investment_widget/presentation/: __init__.py  formatting.py  view_model.py
dash-gui/src/investment_widget/services/: __init__.py  api_client.py  fetch.py  poller.py  widget_behaviour.py  window_pinner.py
dash-gui/src/investment_widget/ui/: Main.qml  MetricCard.qml  PLColumn.qml  StatItem.qml
dash-services/: README.md  __main__.py  logging_conf.py  main.py  pyproject.toml
dash-services/dash/: __init__.py  config.py  constants.py  paths.py  server.py
dash-services/dash/scheduling/: __init__.py  observer.py  scheduledTask.py  task.py  taskStatus.py
dash-services/dash/services/: __init__.py  investmentsService.py  persistenceClient.py  schedulingService.py
dash-services/dash/temp/: store.json
dash-services/scripts/: stop.py
dash/gui/: __init__.py  bridge.py  mainWindow.py
dash/gui/qml/: PortfolioSummaryKVColumn.qml  application.qml
dash/scheduling/: Observer.py  Task.py  __init__.py  observer.py  scheduledTask.py  schedulingStrategy.py  task.py  taskStatus.py
dash/services/: SchedulingService.py  __init__.py  investments.py  investmentsService.py  persistenceClient.py
dash/temp/: store.json
scripts/: install-gui.sh  install-services.sh  stop.py
utils/: logging.py
