[project]
name = "dash"
version = "0.1.0"
description = ""
authors = [
    {name = "cheleaux",email = "nazareth.dnd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyaml (>=26.2.1,<27.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "cherrypy (>=18.10.0,<19.0.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "loguru-config (>=0.1.0,<0.2.0) ; python_version >= \"3.12\" and python_version < \"4.0\""
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psutil (>=6.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
stop = "scripts.stop:stop"